Applied i18n patch from Jacques Le Roux (OFBIZ-268).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5082 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels_fr.properties
+++ b/applications/product/config/ProductUiLabels_fr.properties
@@ -123,7 +123,7 @@ PartyCreateNewContact=Cr\u00E9er de nouvelles coordonn\u00E9es
 PartyEditContactInformation=Edition de coordonn\u00E9es
 PartyEmailAddress=Adresse E-mail
 PartyExtension=Poste
-PartyMechPurposeTypeNotFound=Type d'objet non trouvé avec la r\u00E9f.
+PartyMechPurposeTypeNotFound=Type d'objet non trouv\u00e9 avec la r\u00e9f.
 PartyMsgContactHavePurpose=Note\: ces nouvelles coordonn\u00E9es auront pour usage
 PartyParties=Acteurs
 PartyPartiesFor=Acteurs pour
@@ -156,8 +156,8 @@ ProductActualServices=Service retenu
 ProductActualStartArrive=Retenu (D\u00e9but-Arriv\u00e9e)
 ProductActualTotal=Total effectif
 ProductActualTransport=Transport retenu
-ProductAddCatalogProdCat=Ajouter une cat\u00E9gorie d'article \u00E0 un catalogue (s\u00E9lectionner un catalogue et un type, en option : une date de d\u00E9part)
-ProductAddCatalogProductCategory=Ajout d'une cat\u00E9gorie d'article au catalogue (s\u00E9lectionner le catalogue et le type, en option : une date de d\u00E9part)
+ProductAddCatalogProdCat=Ajoutez une cat\u00E9gorie d'article \u00E0 ce catalogue (s\u00E9lectionnez une cat\u00e9gorie et un type, \u00e9ventuellement une date de d\u00E9part)
+ProductAddCatalogProductCategory=Ajoutez un catalogue \u00E0 cette cat\u00E9gorie d'article (s\u00E9lectionnez un catalogue et le type, \u00e9ventuellement une date de d\u00E9part)
 ProductAddContentProduct=Ajout du contenu d'un article
 ProductAddContentProductConfigItem=Ajout de contenu dans la configuration article
 ProductAddEmail=Ajout d'adresse courriel
@@ -196,7 +196,7 @@ ProductAlternate=Remplacement
 ProductAlternateKeyWordThesaurus=Th\u00e9saurus de mots cl\u00e9s de remplacement
 ProductAmount=Montant
 ProductAmountUomTypeId=Unit\u00e9 du montant
-ProductAndApplyFeaturesToProductWithId=Et applique les caract\u00E9ristiques à l'article r\u00E9f\u00E9renc\u00E9
+ProductAndApplyFeaturesToProductWithId=Et applique les caract\u00E9ristiques \u00e0 l'article r\u00E9f\u00E9renc\u00E9
 ProductAndContainer=Et emplacement
 ProductAndQuantityOnHand=Et quantit\u00E9 disponible
 ProductAnyFacility=du magasin
@@ -245,7 +245,7 @@ ProductCatalogManagerIsFor=Cette application est essentiellement \u00E0 l'attent
 ProductCatalogName=Nom du catalogue
 ProductCatalogNameId=Catalogue ; Nom ; [R\u00E9f\u00E9rence]
 ProductCatalogs=Catalogues
-ProductCatalogViewPermissionError=Vous n'\u00eAtes pas habilit\u00e9 à voir cette page. ("CATALOG_VIEW" ou "CATALOG_ADMIN" est n\u00E9cessaire)
+ProductCatalogViewPermissionError=Vous n'\u00eAtes pas habilit\u00e9 \u00e0 voir cette page. ("CATALOG_VIEW" ou "CATALOG_ADMIN" est n\u00E9cessaire)
 ProductCategories=Cat\u00E9gories
 ProductCategoriesFor=Les cat\u00E9gories de
 ProductCategory=Cat\u00E9gorie
@@ -286,7 +286,7 @@ ProductCopyProductCategoryMembersToAnotherCategory=Associe les articles de cette
 ProductCouldNotFindFacilityWithId=Impossible de trouver le stock avec la r\u00E9f\u00E9rence
 ProductCouldNotFindProduct=Article non trouv\u00E9
 ProductCouldNotFindProductCategoryWithId=Impossible de trouver la cat\u00E9gorie d'article avec la r\u00E9f\u00E9rence
-ProductCouldNotFindProductConfigItem=Impossible de trouver la caract\u00E9ristique de l'article avec la réf.
+ProductCouldNotFindProductConfigItem=Impossible de trouver la caract\u00E9ristique de l'article avec la r\u00e9f.
 ProductCountry=Pays
 ProductCreateAProductFeatureCategory=Cr\u00E9er une caract\u00e9ristique de cat\u00E9gorie
 ProductCreatedBy=Cr\u00e9\u00e9 par
@@ -328,14 +328,14 @@ ProductDestFacility=Dest. stock
 ProductDestination=Destination
 ProductDestinationFacility=Destination stock
 ProductDestinationFacilityIs=Le magasin de destination est
-ProductDestinationPhoneNumberId=N\u00b0 de tél. de destination
+ProductDestinationPhoneNumberId=N\u00b0 de t\u00e9l. de destination
 ProductDestinationPostalAddressId=Adresse de destination
 ProductDetailImage=Image d\u00E9taill\u00E9e
 ProductDetailScreen=Squelette ftl d'affichage du d\u00E9tail
 ProductDuplicateProduct=Copier l'article
 ProductDuplicateRemoveSelectedWithNewId=Duplique l'article en cours avec cette nouvelle r\u00e9f\u00e9rence (et supprime l'ancien en cochant ci-dessous)
-ProductEditCatalog=Edition de l'article
-ProductEditCatalogWithCatalogId=Edition de catalogue avec sa r\u00E9f\u00E9rence 
+ProductEditCatalog=Edition du catalogue
+ProductEditCatalogWithCatalogId=Edition du catalogue avec sa r\u00E9f\u00E9rence 
 ProductEditCategory=Edition de la cat\u00E9gorie
 ProductEditCategoryWithCategoryId=Edition de la cat\u00E9gorie avec sa r\u00E9f\u00E9rence 
 ProductEditContent=Edition de contenu
@@ -355,14 +355,14 @@ ProductErrorProductNotFound=ERREUR\: Article non trouv\u00E9
 ProductErrorType=Erreur\: type
 ProductEstimatedArrivalDate=Date d'arriv\u00e9e estim\u00e9e 
 ProductEstimatedArrivalEvent=Date d'arriv\u00e9e estim\u00e9e
-ProductEstimatedArrivalWorkEffId=R\u00e9f tâche de r\u00e9ception
+ProductEstimatedArrivalWorkEffId=R\u00e9f t\u00e2che de r\u00e9ception
 ProductEstimatedDates=Dates devis
 ProductEstimateId= R\u00e9f du devis
 ProductEstimatedReadyDate=Date
 ProductEstimatedShipCost=Devis de l'exp\u00e9dition
-ProductEstimatedShipDate= Date de mise à disposition estim\u00e9e 
+ProductEstimatedShipDate= Date de mise \u00e0 disposition estim\u00e9e 
 ProductEstimatedShipEvent=Devis de mouvement d'exp\u00e9dition
-ProductEstimatedShipWorkEffId=R\u00e9 tâche d'expédition
+ProductEstimatedShipWorkEffId=R\u00e9 t\u00e2che d'exp\u00c3\u00a9dition
 ProductEstimatedStartArrive=Estimation (D\u00e9but-Arriv\u00e9e)
 ProductExistingInventoryItem=Lignes de stock existantes
 ProductExistingVariant=Existance de variantes r\u00E9f\u00E9renc\u00E9es
@@ -443,7 +443,7 @@ ProductIncludePromotions=Inclure dans les promotions
 ProductIncludeSubCategories=Inclure les articles des sous-cat\u00E9gories
 ProductIncomingShipments=Exp\u00E9ditions pr\u00E9vues
 ProductInitialInventoryItemStatus=Statut initial de la ligne de stock 
-ProductInputOperatorValue=Détail des conditions
+ProductInputOperatorValue=D\u00e9tail des conditions
 ProductInsertDefaultImageUrl=Ins\u00E8re l'URL par d\u00E9faut de l'image en
 ProductInstruction=Instruction
 ProductInternalName=Lib\u00e9ll\u00e9 interne
@@ -574,7 +574,7 @@ ProductNoSpecificShipment=Pas d'exp\u00e9dition sp\u00e9cifique (r\u00e9ception 
 ProductNoStockMovesNeeded=Pas de mouvement de stock n\u00E9cessaire actuellement
 ProductNotAvailable=Non disponible
 ProductNoteForContentOptions=NOTE: Pour les options concernant le contenu, utiliser l'onglet  <contenu>.
-ProductNoteKeywordsAutomaticallyCreated=Mots cl\u00E9s cr\u00E9\u00E9s automatiquement quand le renseignement de l'article est chang\u00E9,mais Cr\u00E9ation ou Suppression manuelle des mots cl\u00E9s qui conviennent.
+ProductNoteKeywordsAutomaticallyCreated=Les mots cl\u00E9s sont cr\u00E9\u00E9s automatiquement quand les informations sur l'article sont chang\u00E9es,mais vous pouvez Cr\u00E9er ou Supprimer manuellement des mots cl\u00E9s ici \u00e9galement.
 ProductNoteOnItemId=Note \u00E0 propos de l'article
 ProductNoteOnPartyId=Note \u00E0 propos de l'acteur
 ProductNoteOrderStatus=NOTE: le statut de l'ordre est
@@ -912,7 +912,7 @@ ProductUnitOfMeasureId=R\u00e9f de l'unit\u00E9 de mesure
 ProductUnknownSpecifyType=Ignorer; sp\u00e9cifie un type
 ProductUnknownSerialNumber=num\u00E9ro de s\u00E9rie inconnu
 ProductUomId=R\u00e9f. de l'unit\u00e9 de mesure
-ProductUpdateDownloadContentProduct=Téléchargement du contenu de l'article
+ProductUpdateDownloadContentProduct=T\u00e9l\u00e9chargement du contenu de l'article
 ProductUpdateEmailContentProduct=Mise \u00e0 jour email de contenu article
 ProductUpdateExternalContentProduct=ProductUpdateExternalContent forProduct
 ProductUpdateProduct=Mise \u00e0 jour de l'article
@@ -928,9 +928,9 @@ ProductUseDays=Nb de jours d'usage
 ProductUseDaysLimit=Limite d'usage en nb de jours
 ProductUsedForDisplayOrdering=Montrer l'ordre
 ProductUseQuickAdd=Ajout rapide
-ProductUseRole=Rôle utilis\u00E9
+ProductUseRole=R\u00f4le utilis\u00E9
 ProductUseTime=Temps utilis\u00E9
-ProductUseTimeUom=Unité de temps utilis\u00E9e
+ProductUseTimeUom=Unit\u00e9 de temps utilis\u00E9e
 ProductUsuallyShipsIn=Habituellement exp\u00E9di\u00E9 en
 ProductValueType=Valeur, type
 ProductVariants=Variantes
@@ -952,7 +952,7 @@ ProductWeight=Poids
 ProductWeightUnit=Unit\u00e9 de poids
 ProductWeightUomId=Unit\u00e9 de poid
 ProductWidthUomId=Unit\u00e9 de largeur
-ProductWorkEffortName=Nom de la tâche
+ProductWorkEffortName=Nom de la t\u00e2che
 ProductWorkItem=Article fabriqu\u00e9
 
 
