Applied l10n patch from Jacques Le Roux, Jira OFBIZ-272
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5112 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonEntityLabels_fr.properties
+++ b/framework/common/config/CommonEntityLabels_fr.properties
@@ -84,7 +84,7 @@ StatusItem.description.SHIPMENT_SHIPPED=Envoy\u00e9
 StatusItem.description.SHRSCS_ACCEPTED=Accept\u00e9
 StatusItem.description.SHRSCS_CONFIRMED=Confirm\u00e9
 StatusItem.description.SHRSCS_NOT_STARTED=Non commenc\u00e9
-StatusItem.description.SHRSCS_VOIDED=Voided
+StatusItem.description.SHRSCS_VOIDED=Vid\u00e9
 StatusItem.description.SYNCHRONIZED=Synchronis\u00e9
 StatusItem.description.WF_ABORTED=Echou\u00e9
 StatusItem.description.WF_COMPLETED=Complet\u00e9
