--- a/framework/common/config/CommonUiLabels_fr.properties
+++ b/framework/common/config/CommonUiLabels_fr.properties
@@ -40,7 +40,7 @@ gr=Grec
 pt=Portugais
 pt_PT=Portugais Portugal
 pt_BR=Portugais Br\u00e9sil
-zh=Chinoi
+zh=Chinois
 
 #application names
 Accounting=Comptabilit\u00e9
@@ -55,24 +55,24 @@ WebTools=Adm. Sys.
 WorkEffort=T\u00e2che
 
 CommonAccepted=Accept\u00e9
-CommonAccounting=Comptabilit\u00E9
+CommonAccounting=Comptabilit\u00e9
 CommonActiveInactive=Actif / Inactif
 CommonActiveOnly=Seulement actif
 CommonAddA=Ajouter un
 CommonAdd=Ajouter
-CommonAddDefault=Ajouter les valeurs par d\u00E9faut
-CommonAddId=Ajouter la r\u00E9f\u00E9rence
+CommonAddDefault=Ajouter les valeurs par d\u00e9faut
+CommonAddId=Ajouter la r\u00e9f\u00e9rence
 CommonAddNew=Cr\u00e9er un nouveau
 CommonAddProblem=Probleme de cr\u00e9ation
 CommonAddressLine=Adresse
 CommonAll=Tous
 CommonAllDay=Chaque jour
-CommonAllMethods=Toutes les m\u00E9thodes
+CommonAllMethods=Toutes les m\u00e9thodes
 CommonAllowSolicitation=Accepte les solicitations
 CommonAll=Tous
 CommonAllWeek=Chaque semaine
 CommonAmount=Montant
-CommonAmount=Quantit\u00E9
+CommonAmount=Quantit\u00e9
 CommonAnd=et
 CommonAny=Indiff\u00e9rent
 CommonAnyOrderStatus=Tout statut
@@ -91,6 +91,7 @@ CommonAttn=A l'Attention de
 CommonAt=\u00e0
 CommonAvailable= Disponible
 CommonBack=Retour
+CommonBackTo=Retour \u00e0
 CommonBackToList=Retour \u00e0 la liste
 CommonBackToOptions=Retour aux options
 CommonBenefit= Avantage
@@ -98,8 +99,8 @@ CommonBy=De
 CommonCancelAll=Tout annuler
 CommonCancel=Annuler
 CommonChange=Modifier
-CommonChecked=V\u00E9rifi\u00e9
-CommonChecking=Contr\u00F4le
+CommonChecked=V\u00e9rifi\u00e9
+CommonChecking=Contr\u00f4le
 CommonCheckoutAnonymousMsg=Vous pouvez valider sans cr\u00e9er un compte utilisateur
 CommonCheckoutAnonymous=Validation en anonyme
 CommonChooseLanguage=Appl. le changement
@@ -116,13 +117,13 @@ CommonContinue= Continuer
 CommonCopy=Copier
 CommonCouldBeUsedAs= Peut-\u00eatre utilis\u00e9 comme
 CommonCountry=Pays
-CommonCreate=Cr\u00E9er
+CommonCreate=Cr\u00e9er
 CommonCreatedBy=Cr\u00e9\u00e9 par
-CommonCreated=Cr\u00E9\u00E9
+CommonCreated=Cr\u00e9\u00e9
 CommonCreateNew=Nouveau
 CommonCredit=Cr\u00e9dit
 CommonCurrent=Actuel
-CommonDatabaseProblem=Probleme de base de donn\u00E9es
+CommonDatabaseProblem=Probleme de base de donn\u00e9es
 CommonDate=Date
 CommonDateFilter=Filtre sur date
 CommonDay=Jour
@@ -131,8 +132,8 @@ CommonDebit=D\u00e9bit
 CommonDeleteAll=Supprimer tout
 CommonDelete=Supprimer
 CommonDescription=Description
-CommonDetail=D\u00E9tail
-CommonDetails=D\u00E9tails
+CommonDetail=D\u00e9tail
+CommonDetails=D\u00e9tails
 CommonDisabled=non actif
 CommonDuplicate=Dupliquer
 CommonEdit=Editer
@@ -152,18 +153,18 @@ CommonFieldsMarkedAreRequired=Les champs suivi d'une (*) sont obligatoire.
 CommonFindAll=Rech. tous
 CommonFind=Rechercher
 CommonFinishDate=Date de fin
-CommonForgotYourPassword=Vous avez oubli\u00E9 votre mot de passe
+CommonForgotYourPassword=Vous avez oubli\u00e9 votre mot de passe
 CommonFormatDateFieldNotCorrect=La saisi d'un champ de date est incorrect , le format doit-\u00eatre AAAA-mm-jj HH:mm:ss
 CommonFormatDateTime=AAAA-MM-JJ  /  hh:mm:ss
 CommonFor=pour
-CommonFound=Trouv\u00E9
+CommonFound=Trouv\u00e9
 CommonFriday=Vendredi
 CommonFromAddress=\u00e0 partir de l'adresse
 CommonFromDate=de la date
 CommonFromDateMissing=Date de d\u00e9but absente
 CommonFromDateNotValidDateTime=Format (date-heure) de la date de d\u00e9but non valide .
 CommonFromDateThruDate=de la date / jusqu'\u00e0 la date
-CommonFromDateTime=\u00E0 partir de la date et  de l'heure
+CommonFromDateTime=\u00e0 partir de la date et  de l'heure
 CommonFrom=De
 CommonGetPasswordHint=Voir votre aide pour le mot de passe
 CommonGoBack=Retour
@@ -172,10 +173,10 @@ CommonGroup=Groupe
 CommonHideFields=Cacher les zones de s\u00e9lection
 CommonHour=Heure
 CommonIdAlreadyExist=Identifiant d\u00e9j\u00e0 existant
-CommonIdCode=Code r\u00E9f\u00E9rence
+CommonIdCode=Code r\u00e9f\u00e9rence
 CommonIdentifier=Identifiant
-CommonId=R\u00E9f.
-CommonIds=R\u00E9f\u00E9rences
+CommonId=R\u00e9f.
+CommonIds=R\u00e9f\u00e9rences
 CommonInformation=Information
 CommonInput=Saisi
 CommonInThe=Dans le
@@ -195,8 +196,8 @@ CommonLogout=Sortie
 CommonLookup=Rechercher
 CommonMain=Principal
 CommonMatched=Identique
-CommonMayCreate=Cr\u00E9er
-CommonMayCreateNewAccountHere=Vous devez cr\u00E9er un nouveau compte
+CommonMayCreate=Cr\u00e9er
+CommonMayCreateNewAccountHere=Vous devez cr\u00e9er un nouveau compte
 CommonMedium=Moyen
 CommonMessage= Message
 CommonMethod=Mode d'envoi
@@ -206,7 +207,7 @@ CommonMyStatus=Mon statut
 CommonName=Nom
 CommonNA=N/A
 CommonNew=Nouveau
-CommonNewSelection=Nouvelle s\u00E9lection
+CommonNewSelection=Nouvelle s\u00e9lection
 CommonNewUser=Nouvel utilisateur
 CommonNext=Suivant
 CommonN=N
@@ -218,7 +219,7 @@ CommonNo=Non
 CommonNoTaskAssigned=Vous n'avez actuellement aucune tache \u00e0 votre attention.
 CommonNote=Note
 CommonNotes=Notes
-CommonNotModifRecreat=ne peut-\u00EAtre modifi\u00E9 sauf re-cr\u00E9ation
+CommonNotModifRecreat=ne peut-\u00eatre modifi\u00e9 sauf re-cr\u00e9ation
 CommonNot=Pas
 CommonNotSet=Non choisi
 CommonNotYetImplemented=Pas encore d\u00e9velopper !!
@@ -226,9 +227,9 @@ CommonNotYou=Pas vous
 CommonNow=Maintenant
 CommonOf=de
 CommonOn=sur
-CommonOpenNewWindow=Ouvrez une nouvelle fen\u00EAtre
+CommonOpenNewWindow=Ouvrez une nouvelle fen\u00eatre
 CommonOpenPageNewWindow=ouvrir la page dans une nouvelle fen\u00eatre
-CommonOpenPageNewW=ouvrir la page dans une nouvelle fen\u00EAtre
+CommonOpenPageNewW=ouvrir la page dans une nouvelle fen\u00eatre
 CommonOptions=Options
 CommonOr=ou
 CommonOverridesSelection=\u00e9crase l'un ou l'autre des choix ci-dessus
@@ -236,22 +237,22 @@ CommonPage=Page
 CommonPartyID=Identifiant de la personne
 CommonPassword=Mot de passe:
 CommonPerform=Executer
-CommonPermissionError=Erreur de droits d'acc\u00E8s, autorisations insuffisantes
+CommonPermissionError=Erreur de droits d'acc\u00e8s, autorisations insuffisantes
 CommonPerson=Personne
-CommonPrevious=Pr\u00E9c\u00E9dent
+CommonPrevious=Pr\u00e9c\u00e9dent
 CommonPriority=Priorit\u00e9
 CommonProfile=Profil
 CommonQualifier= Qualifier
 CommonQuantity=Quantit\u00e9
 CommonQuickAdd=Ajout rapide
 CommonReady=Pr\u00eat
-CommonReceived=Re\u00E7u
+CommonReceived=Re\u00e7u
 CommonReceive=Re\u00e7u
 CommonRed=Rouge
 CommonRefresh=Rafra\u00eechir
 CommonRegistred=Enregistrement connexion utilisateur
 CommonRejected=Refus\u00e9
-CommonRemoveExpired=Supp. les <expir\u00E9s>
+CommonRemoveExpired=Supp. les <expir\u00e9s>
 CommonRemove=Supprimer
 CommonReports=Etats
 CommonRequired=Obligatoire
@@ -260,15 +261,16 @@ CommonResultLookup=R\u00e9sultat de la recherche
 CommonReturn=Retour
 CommonReturnStatus=Statut du retour
 CommonReview=Revoir
-CommonRun=D\u00E9marrer
+CommonRun=D\u00e9marrer
 CommonSaturday=Samedi
 CommonSave=Enrg
 CommonSavings=Sauvegarder
-CommonSearchResultfor=Rechercher les r\u00E9sultats pour
-CommonSecurity=S\u00E9curit\u00E9
+CommonSearch=Rechercher
+CommonSearchResultfor=Rechercher les r\u00e9sultats pour
+CommonSecurity=S\u00e9curit\u00e9
 CommonSelectAll=S\u00e9lectionne tout
-CommonSelected=S\u00E9lectionner
-CommonSelection=S\u00E9lection
+CommonSelected=S\u00e9lectionner
+CommonSelection=S\u00e9lection
 CommonSelectOne=S\u00e9lectionnez en une
 CommonSendDate=Date d'envoi
 CommonSendEmail=envoyer email
@@ -285,10 +287,10 @@ CommonShowLookupFields=Monter les zones de s\u00e9lection
 CommonShow=Montrer
 CommonSince=depuis
 CommonSmall=Petit
-CommonSorryYouCannotSend= D\u00e9sol\u00e9, vous ne pouvez envoyer cette page \u00e0 un ami. Selectionez plutot \u00e0 partir d'un cat\u00e9gorie ou d'un article
-CommonSpecified=Sp\u00E9cifi\u00E9
-CommonStartDate=Date de d\u00E9but
-CommonStartDateTime=Date/heure de d\u00E9but
+CommonSorryYouCannotSend= D\u00e9sol\u00e9, vous ne pouvez envoyer cette page \u00e0 un ami. S\u00e9lectionez plut\u00f4t \u00e0 partir d'un cat\u00e9gorie ou d'un article
+CommonSpecified=Sp\u00e9cifi\u00e9
+CommonStartDate=Date de d\u00e9but
+CommonStartDateTime=Date/heure de d\u00e9but
 CommonStateProvince=Etat/Province
 CommonStats=Etats
 CommonStatus=Statut
@@ -302,9 +304,9 @@ CommonTheFollowingErrorsOccurred=Les erreurs suivantes ont \u00e9t\u00e9 lev\u00
 CommonTheFollowingOccurred=Information sur l'action effectu\u00e9e
 CommonTheFollowingRequiredFieldsWhereFoundEmpty=Les champs suivants sont vides
 CommonTheOpenForBusinessProject=Le projet Open For Business
-CommonThruDate=jusqu'\u00E0 la date
-CommonThruDateTime=jusqu'\u00E0 la date & l'heure
-CommonThru=Jusqu'\u00E0
+CommonThruDate=jusqu'\u00e0 la date
+CommonThruDateTime=jusqu'\u00e0 la date & l'heure
+CommonThru=Jusqu'\u00e0
 CommonThursday=Jeudi
 CommonTime=Heure
 CommonTitle=Titre
@@ -313,21 +315,21 @@ CommonToday=Aujourd'hui
 CommonTo= Jusqu'\u00e0
 CommonToName=Au nom de
 CommonTotal=Total
-CommonTo=\u00E0
+CommonTo=\u00e0
 CommonTuesday=Mardi
 CommonUnitPrice=P.U.
 CommonUntil=jusqu'\u00e0
 CommonUom=UOM
-CommonUpdatedEffectiveThru=Mise \u00E0 jour effective \u00E0 travers
+CommonUpdatedEffectiveThru=Mise \u00e0 jour effective \u00e0 travers
 CommonUpdated=Mise \u00e0 jour
 CommonUpdate=Enregistrer
-CommonUpdateLink=Mettre \u00E0 jour le lien
-CommonUpdate=Mettre \u00E0 jour
+CommonUpdateLink=Mettre \u00e0 jour le lien
+CommonUpdate=Mettre \u00e0 jour
 CommonUsedAs= Utiliser comme
 CommonUsed= Utiliser
 CommonUsername=Nom d'utilisateur
 CommonValidate=Valider
-CommonValidityProblem=Probleme de validit\u00E9
+CommonValidityProblem=Probleme de validit\u00e9
 CommonValue=Valeur
 CommonViewCalendar=Voir Calendrier
 CommonView=Voir
@@ -335,7 +337,7 @@ CommonVolume=Volume
 CommonWednesday=Mercredi
 CommonWeek=semaine
 CommonWelcome=Bienvenue
-CommonWhere=O\u00F9
+CommonWhere=O\u00f9
 CommonWorkflowActivityUser=Actions du workflow associ\u00e9s \u00e0 l'utilisateur
 CommonWorkflowActivityUserRole=Actions du workflow associ\u00e9s au r\u00f4le de l'utilisateur
 CommonYes=Oui
