Applied i18n patch for French labels from Jean-Luc Malet (OFBIZ-261).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5121 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/content/config/conditional_fr.properties
+++ b/applications/content/config/conditional_fr.properties
@@ -13,4 +13,4 @@ less_than_equals=plus petit ou \u00e9gal
 same_day=m\u00eame jour
 greater_than_from_day_start=plus grand que le jour
 up_to_day=Jusqu'au jour
-up_thru_day=Up Thru Day
+up_thru_day= Inclus ce jour
