--- a/applications/party/config/PartyUiLabels_fr.properties
+++ b/applications/party/config/PartyUiLabels_fr.properties
@@ -7,7 +7,7 @@
  fr=Fran\u00e7ais
  de=Allemand
  AccountingAddNewGiftCard=Ajouter une nouvelle carte cadeau
-AccountingBillingAccount=Comptes de facturation
+ AccountingBillingAccount=Comptes de facturation
  AccountingCardInfoNotBelongToYou=Cette carte ne vous est pas associ\u00e9e
  AccountingCardNumber=N\u00b0 de carte
  AccountingCreateNewCreditCard=Enrg. nouv. carte de cr\u00e9dit
@@ -65,7 +65,7 @@ AccountingBillingAccount=Comptes de facturation
  CommonSet=Action
  CommonSince=Depuis
  CommonStartDate=Date de d\u00e9but
- CommonSubmit=Envoy\u00e9
+ CommonSubmit=Envoyer
  CommonTest=Test en fran\u00e7ais
  CommonThruDate=jusqu'\u00e0 la date
  CommonUom=UOM
@@ -235,7 +235,7 @@ PartyPartyGroupInformation=Information groupe d'acteur
 PartyPartyGroupName=Nom du groupe d'acteur
 PartyParty=Acteur
 PartyPartyFrom=De l'acteur
-PartyPartyId=Id de l'acteur
+PartyPartyId=R\u00e9f. de l'acteur
 PartyPartyIDUserLoginID=Id de l'acteur et ident. de connexion 
 PartyPartyNotDefined=Acteur non d\u00e9fini
 PartyPartyTo=\u00e0 l'acteur
