--- a/applications/ecommerce/config/EcommerceUiLabels_de.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels_de.properties
@@ -1,22 +1,17 @@
 ###################################################################
 ##
 ##  FileName		: EcommerceUiLabel.properties
-## 
+##
 ##  Author    		: Ravichandar Arukala Email: arukala@gmx.de
 ##
-##  Description		: This File has German Words 
+##  Description		: This File has German Words
 ##		              for Localization of Ecommerce Platform
 ##
 ###################################################################
 ###################################################################
 ####
-# OFBiz UiLabel Properties used for the Ecommerce module 
+# OFBiz UiLabel Properties used for the Ecommerce module
 #
-en=Englisch
-de=Deutsch
-gr=Griechisch
-bu=Bulgarisch
-
 AccountingAccount=Konto
 AccountingAccountNumber=Kontonummer
 AccountingAccountType=Kontotyp
@@ -77,7 +72,7 @@ CommonBy=durch
 CommonCancel=abbrechen
 CommonChecking=Girokonto
 CommonCheckoutAnonymous=Anonyme Bestellung
-CommonCheckoutAnonymousMsg=Sie k\u00f6nnen auch ohne Konto bestelllen
+CommonCheckoutAnonymousMsg=Sie k\u00F6nnen auch ohne Konto bestelllen
 CommonChooseLanguage=Sprachauswahl
 CommonClear=leeren
 CommonClickHere=Dann Klicken Sie hier
@@ -85,7 +80,7 @@ CommonComment=Anmerkungen
 CommonComments=Anmerkungen
 CommonContactUs=Kontakt
 CommonContinue=Forsetzen
-CommonCouldBeUsedAs=Kann verwendet werden als 
+CommonCouldBeUsedAs=Kann verwendet werden als
 CommonCreate=anlegen
 CommonCreateNew=neu anlegen
 CommonDate=Datum
@@ -98,7 +93,7 @@ CommonEmailPassword=Email Passwort
 CommonEmailTo=Email an
 CommonExpire=auslaufen
 CommonExpires=auslaufen
-CommonFieldsMarkedAreRequired=Markierte Felder werden ben\u00f6tigt
+CommonFieldsMarkedAreRequired=Markierte Felder werden ben\u00F6tigt
 CommonFind=Suche
 CommonForgotYourPassword=Sie haben Ihr Passwort vergessen
 CommonFrom=von
@@ -137,12 +132,11 @@ CommonRemove=zur\u00FCcksetzen
 CommonReview=Beurteilung
 CommonSave=speichern
 CommonSavings=Sparbuch
-CommonSearchResultfor=Suche Resultate f\u00FCr das Stichwort 
+CommonSearchResultfor=Suche Resultate f\u00FCr das Stichwort
 CommonSelectAll=alle ausw\u00E4hlen
 CommonSend=senden
-CommonSorryYouCannotSend=Leider k\u00f6nnen Sie diese Seite nicht an einen Freund senden. Bitte w\u00e4hlen Sie eine aus der Produkt oder Kategorieansicht.
+CommonSorryYouCannotSend=Leider k\u00F6nnen Sie diese Seite nicht an einen Freund senden. Bitte w\u00E4hlen Sie eine aus der Produkt oder Kategorieansicht.
 CommonStatus=Status
-CommonSubTotal=Teilsumme
 CommonSubtotal=Teilsumme
 CommonTellAFriend=Einen Freund informieren
 CommonTitle=Titel
@@ -163,8 +157,8 @@ EcommerceAddCheckedToCart=Ausgew\u00E4hlte Artikel in den Warenkorb legen
 EcommerceAddChildListsToCart=F\u00FCgen Sie diese Liste mit Unterliste(n) zum Warenkorb hinzu
 EcommerceAddListToCart=Liste zum Warenkorb hinzuf\u00FCgen
 EcommerceAddSelectedtoList=Ausgew\u00E4hlte Artikel in Liste aufnehmen
-EcommerceAddToCart=In den Warenkorb legen
-EcommerceAddToShoppingList=In Einkaufsliste aufnehmen
+EcommerceAddtoCart=In den Warenkorb legen
+EcommerceAddtoShoppingList=In Einkaufsliste aufnehmen
 EcommerceAdjustment=Anpassung
 EcommerceAdjustments=Anpassungen
 EcommerceAlwaysViewCartAfterAddingAnItem=Immer den Warenkorb pr\u00FCfen, wenn ein neuer Artikel hineingelegt wurde.
@@ -182,7 +176,7 @@ EcommerceChooseVariations=Variante ausw\u00E4hlen
 EcommerceContinueShopping=Einkauf fortsetzen
 EcommerceCustomerReviews=Bewertung von Kunden
 EcommerceEmptyCart=Warenkorb leeren
-EcommerceErrorNoPromotionFoundWithID=FEHLER\: Keine Aktion gefunden mit der ID
+EcommerceErrorNoPromotionFoundWithID=FEHLER: Keine Aktion gefunden mit der ID
 EcommerceGoToList=Zur Liste
 EcommerceIncludes=einschlie\u00DFlich
 EcommerceIsAPromotionalItem=Ist ein Aktionsartikel
@@ -212,7 +206,7 @@ EcommercePieces=St\u00FCcke
 EcommercePostAnonymous=Anonym schicken
 EcommercePrice=Preis
 EcommerceProduct=Produkt
-EcommerceProductsForPromotion=Aktionsprodukte 
+EcommerceProductsForPromotion=Aktionsprodukte
 EcommercePromotion=Aktion
 EcommercePromotionDetails=Aktionsdetails
 EcommercePromotionInformation=Aktionsinformation
@@ -230,7 +224,7 @@ EcommerceShoppingCart=Warenkorb
 EcommerceShoppingCartEmpty=Der Warenkorb ist leer
 EcommerceShoppingListDetail=Einkaufsliste, detail
 EcommerceShoppingListEmpty=Ihre Einkaufsliste ist leer
-EcommerceShoppingListError=FEHLER\: Die spezifizierte Einkaufsliste (mit
+EcommerceShoppingListError=FEHLER: Die spezifizierte Einkaufsliste (mit
 EcommerceShoppingListPriceTotals=Gesamtsumme der Einkaufsliste
 EcommerceShoppingLists=Einkaufslisten
 EcommerceSpecialOffers=Sonderangebote
@@ -266,11 +260,11 @@ OrderCommaSeperatedEmailAddresses=Sie k\u00F6nnen hier andere, durch Komma getre
 OrderConfirmation=Bestellbest\u00E4tigung
 OrderContinueShopping=Einkauf fortsetzen
 OrderContinueToFinalOrderReview=Weiter zur abschlie\u00DFenden Bestell\u00FCberpr\u00FCfung
-OrderDemoFrontNote=ANMERKUNG\: Dies ist eine DEMO Version.  Hier get\u00E4tigte Bestellungen werden NICHT in Rechnung gestellt und NICHT realisiert.
+OrderDemoFrontNote=ANMERKUNG: Dies ist eine DEMO Version.  Hier get\u00E4tigte Bestellungen werden NICHT in Rechnung gestellt und NICHT realisiert.
 OrderDestination=Bestimmungsort
 OrderDistributor=Lieferant
 OrderEmailSentToFollowingAddresses=Ihre Bestellung wird zu folgender Email-Adresse gesendet
-OrderErrorShoppingCartEmpty=FEHLER\: Warenkorb leer, bitte beginnen sie erneut.
+OrderErrorShoppingCartEmpty=FEHLER: Warenkorb leer, bitte beginnen sie erneut.
 OrderFinalCheckoutReview=Abschlie\u00DFende Bestell\u00FCberpr\u00FCfung
 OrderGift=Geschenk
 OrderGiftMessage=Geschenk Information
@@ -303,7 +297,7 @@ OrderRequestedResponse=gew\u00FCnschte Antwort
 OrderReturnItems=Artikel zur\u00FCckgeben
 OrderReturnItemsFromOrder=Artikel der Bestellung zur\u00FCckgeben
 OrderReturnSelectedItems=ausgew\u00E4hlte Artikel zur\u00FCckgeben
-OrderSalesOrderLookupFailed=FEHLER\: Abfrage der Kundenauftragszeilen ist fehlgeschlagen
+OrderSalesOrderLookupFailed=FEHLER: Abfrage der Kundenauftragszeilen ist fehlgeschlagen
 OrderSalesTax=Mehrwertsteuer
 OrderSelectShipFromAddress=Bitte w\u00E4hlen Sie eine Versandadresse aus
 OrderSendPaymentTo=Bitte senden Sie die Bezahlung an
@@ -319,8 +313,8 @@ OrderSubmittingOrder=Bitte warten Sie, der Auftrag wird verarbeitet...
 OrderThisIsGift=Diese Bestellung ist ein GESCHENK
 OrderThisIsNotGift=Diese Bestellung ist kein Geschenk
 OrderTrackingNumber=\u00DCberwachungsnummer
-OrderUpdateEmailAddress=Sie k\u00F6nnen dies aktualisieren in 
-OrderUseDefault=Voreinstellung\: Keine andere Versandmethode verf\u00FCgbar
+OrderUpdateEmailAddress=Sie k\u00F6nnen dies aktualisieren in
+OrderUseDefault=Voreinstellung: Keine andere Versandmethode verf\u00FCgbar
 OrderWhereShallWeShipIt=Wohin sollen wir es versenden
 PageTitleAdvancedSearch=Erweiterte Suche
 PageTitleCategoryPage=Kategorie Seite
@@ -338,7 +332,7 @@ PageTitleMain=Startseite
 PageTitleNewCustomer=Neuer Kunde
 PageTitleOrderHistory=Bestellhistorie
 PageTitleOrderStatus=Bestellstatus
-PageTitleOrderSummary=Bestellzusammenfassung - Vielen Dank f\u00FCr Ihre Bestellung\!
+PageTitleOrderSummary=Bestellzusammenfassung - Vielen Dank f\u00FCr Ihre Bestellung!
 PageTitleProductPage=Produkt Seite
 PageTitleProductReview=Produktbewertung
 PageTitleQuickAdd=Schnelleingabe
@@ -366,7 +360,7 @@ PartyBasicInformation=Basisinformation
 PartyBillingAddress=Rechnungsadresse
 PartyBillingAddressNotSelected=Sie haben noch keine Rechnungsadresse ausgew\u00E4hlt
 PartyBirthDate=Geburtsdatum
-PartyBirthDateMissingError=Geburtsdatum ist nicht im richtigen Format, es muss dem folgenden Muster entsprechen\: yyyy-mm-dd, z.B. 1982-07-21
+PartyBirthDateMissingError=Geburtsdatum ist nicht im richtigen Format, es muss dem folgenden Muster entsprechen: yyyy-mm-dd, z.B. 1982-07-21
 PartyBusinessPhone=Gesch\u00E4ftstelefonnummer
 PartyChangePassword=Passwort \u00E4ndern
 PartyCity=Stadt
@@ -382,7 +376,7 @@ PartyContactTelephoneMissingError=Telefonnummer fehlt
 PartyContactType=Kontakttyp
 PartyCountry=Land
 PartyCountryCode=Landesvorwahl
-PartyCountryMissing=Land fehlt 
+PartyCountryMissing=Land fehlt
 PartyCreateNewBillingAddress=Legen Sie eine neue Rechnungsadresse f\u00FCr diese Kreditkarte an
 PartyCreateNewContactInfo=Neue Kontaktinformation anlegen
 PartyCreateNewCreditCard=Neue Kreditkarte anlegen
@@ -393,7 +387,7 @@ PartyEditContactInfo=Kontaktinformation bearbeiten
 PartyEditPersonalInformation=Pers\u00F6nliche Information bearbeiten
 PartyEmailAddress=Email Adresse
 PartyEmailAddressMissingError=E-mail Adresse fehlt
-PartyEmailAddressNotFormattedCorrectly=Email Adresse ist nicht im richtigen Format, sie muss dem folgenden Muster entsprechen\: name@domain
+PartyEmailAddressNotFormattedCorrectly=Email Adresse ist nicht im richtigen Format, sie muss dem folgenden Muster entsprechen: name@domain
 PartyEmailAddresses=Email Adressen
 PartyEnterPasswordTwice=Sie m\u00FCssen Ihr Passwort zwei mal eingeben
 PartyExtension=Durchwahl
@@ -414,7 +408,7 @@ PartyMiddleInitial=Initiale des zweiten Vornamens
 PartyMobilePhone=Handynummer
 PartyName=Name
 PartyNameAndShippingAddress=Name und Versandadresse
-PartyNewContactHavePurpose=Bitte beachten Sie\: diese neuen Kontaktinformationen sind f\u00FCr den Verwendungszweck
+PartyNewContactHavePurpose=Bitte beachten Sie: diese neuen Kontaktinformationen sind f\u00FCr den Verwendungszweck
 PartyNewPassword=Neues Passwort
 PartyNewPasswordVerify=Neues Passwort best\u00E4tigen
 PartyNewUser=Neuer Nutzer
@@ -465,7 +459,7 @@ ProductAdvancedSearchIn=Erweiterte Suche in
 ProductAdvancedSearchinCategory=Erweiterte Suche in der Produktgruppe
 ProductAllKeyword=Alle Stichworte
 ProductAnyKeyword=Beliebiges Stichwort
-ProductBeTheFirstToReviewThisProduct=Seien Sie der Erste, der dieses Produkt beurteilt\!
+ProductBeTheFirstToReviewThisProduct=Seien Sie der Erste, der dieses Produkt beurteilt!
 ProductBrowseCategories=Produktgruppen durchsuchen
 ProductBrowseContent=Inhalt durchsuchen
 ProductBrowseForums=Foren durchsuchen
@@ -473,10 +467,10 @@ ProductCannotReviewUnKnownProduct=Sie k\u00F6nnen ein unbekanntes Produkt nicht 
 ProductCategory=Produktgruppe
 ProductCategoryNotFoundforCategoryID=Produktgruppe wurde nicht gefunden mit ID
 ProductChooseCatalog=Katalog ausw\u00E4hlen
-ProductChooseQuickAddCategory=Auswahl einer Produktgruppe f\u00FCr Schnelleingabe 
+ProductChooseQuickAddCategory=Auswahl einer Produktgruppe f\u00FCr Schnelleingabe
 ProductCompareAtPrice=Preis vergleichen
 ProductEntireCatalog=Gesamtkatalog
-ProductErrorProductNotFound=FEHLER\: Produkt nicht gefunden
+ProductErrorProductNotFound=FEHLER: Produkt nicht gefunden
 ProductItemOutofStock=Dieser Artikel ist nicht auf Lager
 ProductKeywordRelevency=Stichwortrelevanz
 ProductKeywords=Stichw\u00F6rter
@@ -498,12 +492,14 @@ ProductProductsLastViewed=zuletzt angesehene Produkte
 ProductQuickReorder=Wiederbestellung
 ProductRefineSearch=Verfeinerte Suche
 ProductRegularPrice=Regul\u00E4rer Preis
-ProductReviewThisProduct=Bewerten Sie dieses Produkt\!
+ProductReviewThisProduct=Bewerten Sie dieses Produkt!
 ProductSearchCatalog=Suche im Produktkatalog
 ProductSearchinCategory=Suche in Produktgruppe
 ProductSortOrder=Sortierungsreihenfolge
 ProductSortedBy=Sortiert nach
-ProductUsuallyShipsIn=gew\u00F6hnlicherweise Versand in 
+ProductUsuallyShipsIn=gew\u00F6hnlicherweise Versand in
 ProductYouSearchedFor=Sie suchen nach
-#eigene Angefügte:
-MostRecentlyUsed=Zuletzt Ausgew\u00E4hlte Artikel
+bu=Bulgarisch
+de=Deutsch
+en=Englisch
+gr=Griechisch
