Added patch from Jacques Le Roux for i18n and l10n of order component artifacts, many related to ecommerce; Jira #OFBIZ-276
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5126 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels_zh.properties
+++ b/applications/order/config/OrderUiLabels_zh.properties
@@ -1,90 +1,81 @@
-\ufeff###################################################################
 ##
 ##  FileName		: OrderUiLabel_zh.properties
-## 
+##
 ##  Author    		: OFBizCHINA.com
 ##
-##  Description		: This File has English Words 
+##  Description		: This File has English Words
 ##		              for Localization of Order Platform
 ##
 ###################################################################
 ###################################################################
 ####
-# OFBiz UiLabel Properties used for the Order module 
+# OFBiz UiLabel Properties used for the Order module
 #
-
 # $(totalQuantity) count of items
-cart.add_category_defaults=Added ${totalQuantity} items to the cart.
-cart.addToCart.noProductInfoPassed=No product information passed, not adding anything to cart.
-cart.quantity_not_positive_number=Quantity must be a positive number
-
-CommonAddDefault=Add Default
-CommonAll=\u5168\u90E8
-CommonAny=\u4EFB\u4E00
-CommonBy=By
-CommonDays=\u5929\u6570
-CommonDetails=Details
-CommonFind=\u67E5\u8BE2
-CommonLogin=\u767B\u5F55
-CommonNext=\u4E0B\u4E00\u9875
-CommonOn=On
-CommonPassword=\u53E3\u4EE4
-CommonPrevious=\u4E0A\u4E00\u9875
-CommonRegistred=\u6CE8\u518C\u7528\u6237
-CommonUsername=\u767B\u5F55\u540D
-CommonWelcome=\u6B22\u8FCE
-
-EcommerceAddtoCart=\u52A0\u5165\u8D2D\u7269\u8F66
-EcommerceAddtoShoppingList=Add To Shopping List
-EcommerceAnonymous=Anonymous
-EcommerceChooseVariations=Choose Variation
-EcommerceCustomerReviews=Customer Reviews
-EcommerceIncludes=Includes
-EcommerceOnSale=On Sale
-EcommercePieces=Pieces
-EcommerceRanking=Ranking
-EcommerceSpecialOffers=Special Offers
-EcommerceToCart=to Cart
-EcommerceYourPrice=Your Price
-
-EcommerceViewAllPromotions=View All Promotions
-EcommercePromotionInformation=Promotion Information
-EcommercePromotionsApplied=Promotions Applied
-EcommercePromotion=Promotion
-EcommerceCartItemUseinPromotions=Cart Item Use in Promotions
-EcommerceIsAPromotionalItem=Is a Promotional Item
-EcommerceOfPromotion=of Promotion 
-EcommerceViewAllPromotions=View All Promotions
-EcommercePromotionDetails=Promotion Details
-EcommerceProductsForPromotion=Products For Promotion
-EcommerceErrorNoPromotionFoundWithID=ERROR: No promotion found with ID
-
-# productId = failing productId
-item.product_not_found=Product not found, not adding to cart. [productId\: ${productId}]
-
-PageTitleLogin=\u767B\u5F55
-
-ProductAddProductsUsingDefaultQuantities=\u5C06\u5F53\u524D\u7C7B\u578B\u7684\u5546\u54C1\u6309\u7167\u9ED8\u8BA4\u6570\u91CF\u6DFB\u52A0\u5165\u8D2D\u7269\u8F66
-ProductAdvancedSearchinCategory=\u5546\u54C1\u7C7B\u578B\u4E2D\u9AD8\u7EA7\u641C\u7D22
-ProductAdvancedSearchIn=\u9AD8\u7EA7\u641C\u7D22
-ProductAdvancedSearch=\u9AD8\u7EA7\u641C\u7D22
-ProductBrowseCategories=\u5546\u54C1\u7C7B\u522B\u4E00\u89C8
-ProductCategoryNotFoundforCategoryID=\u6CA1\u6709\u627E\u5546\u54C1\u7C7B\u578B. \u7F16\u53F7\: 
-ProductChooseCatalog=\u9009\u62E9\u76EE\u5F55
-ProductEntireCatalog=\u6574\u4E2A\u76EE\u5F55
-ProductErrorProductNotFound=\u9519\u8BEF\: \u6CA1\u6709\u627E\u5230\u5546\u54C1
-ProductItemOutofStock=\u7F3A\u8D27\u4E2D
-ProductKeywords=\u5173\u952E\u5B57
-ProductListPrice=List Price
-ProductNoLongerAvailable=\u4E0D\u80FD\u4F7F\u7528
-ProductNoProductsInThisCategory=\u8BE5\u7C7B\u578B\u4E2D\u6CA1\u6709\u5546\u54C1
-ProductNoResultsFound=\u672A\u68C0\u7D22\u5230\u6570\u636E
-ProductNotYetAvailable=Not Yet Available
-ProductProductNoLongerAvailable=\u6B64\u5546\u54C1\u4E0D\u518D\u51FA\u9500\u552E
-ProductProductNotFound=\u6CA1\u6709\u627E\u5230\u5546\u54C1
-ProductProductNotReviewedYet=This product hasn't been reviewed yet
-ProductProductNotYetMadeAvailable=\u6B64\u5546\u54C1\u8FD8\u4E0D\u80FD\u88AB\u8D2D\u4E70
-ProductRegularPrice=Regular Price
-ProductSearchCatalog=\u641C\u7D22\u5546\u54C1\u76EE\u5F55
-ProductSearchinCategory=\u641C\u7D22\u5546\u54C1\u7C7B\u522B
-ProductUsuallyShipsIn=Usually ships in 
+CommonAddDefault = Add Default
+CommonAll = \u5168\u90E8
+CommonAny = \u4EFB\u4E00
+CommonBy = By
+CommonDays = \u5929\u6570
+CommonDetails = Details
+CommonFind = \u67E5\u8BE2
+CommonLogin = \u767B\u5F55
+CommonNext = \u4E0B\u4E00\u9875
+CommonOn = On
+CommonPassword = \u53E3\u4EE4
+CommonPrevious = \u4E0A\u4E00\u9875
+CommonRegistred = \u6CE8\u518C\u7528\u6237
+CommonUsername = \u767B\u5F55\u540D
+CommonWelcome = \u6B22\u8FCE
+EcommerceAddtoCart = \u52A0\u5165\u8D2D\u7269\u8F66
+EcommerceAddtoShoppingList = Add To Shopping List
+EcommerceAnonymous = Anonymous
+EcommerceCartItemUseinPromotions = Cart Item Use in Promotions
+EcommerceChooseVariations = Choose Variation
+EcommerceCustomerReviews = Customer Reviews
+EcommerceErrorNoPromotionFoundWithID = ERROR: No promotion found with ID
+EcommerceIncludes = Includes
+EcommerceIsAPromotionalItem = Is a Promotional Item
+EcommerceOfPromotion = of Promotion
+EcommerceOnSale = On Sale
+EcommercePieces = Pieces
+EcommerceProductsForPromotion = Products For Promotion
+EcommercePromotion = Promotion
+EcommercePromotionDetails = Promotion Details
+EcommercePromotionInformation = Promotion Information
+EcommercePromotionsApplied = Promotions Applied
+EcommerceRanking = Ranking
+EcommerceSpecialOffers = Special Offers
+EcommerceToCart = to Cart
+EcommerceViewAllPromotions = View All Promotions
+EcommerceYourPrice = Your Price
+OrderShipGroup = 
+PageTitleLogin = \u767B\u5F55
+ProductAddProductsUsingDefaultQuantities = \u5C06\u5F53\u524D\u7C7B\u578B\u7684\u5546\u54C1\u6309\u7167\u9ED8\u8BA4\u6570\u91CF\u6DFB\u52A0\u5165\u8D2D\u7269\u8F66
+ProductAdvancedSearch = \u9AD8\u7EA7\u641C\u7D22
+ProductAdvancedSearchIn = \u9AD8\u7EA7\u641C\u7D22
+ProductAdvancedSearchinCategory = \u5546\u54C1\u7C7B\u578B\u4E2D\u9AD8\u7EA7\u641C\u7D22
+ProductBrowseCategories = \u5546\u54C1\u7C7B\u522B\u4E00\u89C8
+ProductCategoryNotFoundforCategoryID = \u6CA1\u6709\u627E\u5546\u54C1\u7C7B\u578B. \u7F16\u53F7:
+ProductChooseCatalog = \u9009\u62E9\u76EE\u5F55
+ProductEntireCatalog = \u6574\u4E2A\u76EE\u5F55
+ProductErrorProductNotFound = \u9519\u8BEF: \u6CA1\u6709\u627E\u5230\u5546\u54C1
+ProductItemOutofStock = \u7F3A\u8D27\u4E2D
+ProductKeywords = \u5173\u952E\u5B57
+ProductListPrice = List Price
+ProductNoLongerAvailable = \u4E0D\u80FD\u4F7F\u7528
+ProductNoProductsInThisCategory = \u8BE5\u7C7B\u578B\u4E2D\u6CA1\u6709\u5546\u54C1
+ProductNoResultsFound = \u672A\u68C0\u7D22\u5230\u6570\u636E
+ProductNotYetAvailable = Not Yet Available
+ProductProductNoLongerAvailable = \u6B64\u5546\u54C1\u4E0D\u518D\u51FA\u9500\u552E
+ProductProductNotFound = \u6CA1\u6709\u627E\u5230\u5546\u54C1
+ProductProductNotReviewedYet = This product hasn't been reviewed yet
+ProductProductNotYetMadeAvailable = \u6B64\u5546\u54C1\u8FD8\u4E0D\u80FD\u88AB\u8D2D\u4E70
+ProductRegularPrice = Regular Price
+ProductSearchCatalog = \u641C\u7D22\u5546\u54C1\u76EE\u5F55
+ProductSearchinCategory = \u641C\u7D22\u5546\u54C1\u7C7B\u522B
+ProductUsuallyShipsIn = Usually ships in
+cart.addToCart.noProductInfoPassed = No product information passed, not adding anything to cart.
+cart.add_category_defaults         = Added ${totalQuantity} items to the cart.
+cart.quantity_not_positive_number  = Quantity must be a positive number
+item.product_not_found = Product not found, not adding to cart. [productId: ${productId}]
