Applied i18n and l10n correction patches from Jacques Le Roux; Jira #OFBIZ-279
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5132 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels_fr.properties
+++ b/applications/product/config/ProductUiLabels_fr.properties
@@ -10,7 +10,6 @@
 ####
 # OFBiz UiLabel Properties pour le module Product
 #
-
 AccountingBillingAcc=Comptes de facturation
 AccountingFixedAsset=Immobilisation fixe
 AccountingFixedAssetId=R\u00E9f. immobilisation fixe
@@ -998,7 +997,7 @@ ProductWebSiteId=Site Web [r\u00E9f]
 ProductWebSites=Sites Web
 ProductWeight=Poids
 ProductWeightUnit=Unit\u00E9 de poids
-ProductWeightUomId=Unit\u00E9 de poid
+ProductWeightUomId=Unit\u00E9 de poids
 ProductWidthUomId=Unit\u00E9 de largeur
 ProductWorkEffortName=Nom de la t\u00E2che
 ProductWorkItem=Article fabriqu\u00E9
@@ -1030,7 +1029,7 @@ productevents.could_not_remove_productkeyword_entry_notexists=Impossible de supp
 productevents.could_not_remove_productkeyword_entry_writeerror=Impossible de supprimer le mot-cl\u00E9 de l'article (erreur d'\u00E9criture).
 productevents.could_not_update_attribute_write=Impossible de mettre \u00E0 jour l'attribut (erreur d'\u00E9criture).
 productevents.could_not_update_product_association_write=Impossible de mettre \u00E0 jour l'association \u00E0 l'article (erreur d'\u00E9criture).
-productevents.error_getting_product_list=Erreur en obtenant la liste de produit \u00E0 l'index : $ {gee}.
+productevents.error_getting_product_list=Erreur en obtenant la liste de produit \u00E0 l'index : ${gee}.
 productevents.following_errors_occurred=Les erreurs suivantes sont apparues :
 productevents.from_date_missing=La date de d\u00E9but manque.
 productevents.keyword_creation_complete_for_products=La cr\u00E9ation de mot-cl\u00E9 est termin\u00E9e pour ${numProds} produits,
@@ -1057,33 +1056,33 @@ productsearchevents.removed_x_items=${numRemoved} articles supprim\u00E9s.
 productsearchevents.thruDate_not_formatted_properly=Le champ "Date \u00E0" n'est pas convenablement format\u00E9 : ${errDateFormat}.
 productservices.both_productId_and_productIdTo_cannot_be_defined=La "R\u00E9f. de produit" et la "R\u00E9f. de produit vers" n'ont pu \u00EAtre d\u00E9finis.
 productservices.both_productId_and_productIdTo_cannot_be_null=La "R\u00E9f. de produit" et la "R\u00E9f. de produit vers" ne peuvent tous les 2 nuls.
-productservices.cannot_build_feature_tree_full=Ne peut construire l'arbre de caract\u00E9ristiques : la liste de caract\u00E9ristiques est nulle. 
+productservices.cannot_build_feature_tree_full=Ne peut construire l'arbre de caract\u00E9ristiques : la liste de caract\u00E9ristiques est nulle.
 productservices.empty_list_of_products_returned=Liste de produits retourn\u00E9s vide.
-productservices.empty_list_of_selectable_features_found=Liste de caract\u00E9ristiques s\u00E9lectionnables trouv\u00E9es vide. 
-productservices.error_finding_associated_variant_with_ID_error=Erreur dans la variante associ\u00E9e avec la r\u00E9f.D $ {productIdTo}, l'erreur \u00E9tait : ${errMessage}.
-productservices.feature_grouping_came_back_empty=Le groupement de caract\u00E9ristiques est revenu vide. 
-productservices.feature_sample_came_back_empty=L'exemple de caract\u00E9ristique est revenu vide. 
+productservices.empty_list_of_selectable_features_found=Liste de caract\u00E9ristiques s\u00E9lectionnables trouv\u00E9es vide.
+productservices.error_finding_associated_variant_with_ID_error=Erreur dans la variante associ\u00E9e avec la r\u00E9f. ${productIdTo}, l'erreur \u00E9tait : ${errMessage}.
+productservices.feature_grouping_came_back_empty=Le regroupement de caract\u00E9ristiques est revenu vide.
+productservices.feature_sample_came_back_empty=L'exemple de caract\u00E9ristique est revenu vide.
 productservices.invalid_productId_passed=R\u00E9f. de produit non valide.
-productservices.problem_reading_product_feature_entity=Probl\u00E8me \u00E0 la lecture de l'entit\u00E9 des caract\u00E9ristiques de produit : ${errMessage}. 
+productservices.problem_reading_product_feature_entity=Probl\u00E8me \u00E0 la lecture de l'entit\u00E9 des caract\u00E9ristiques de produit : ${errMessage}.
 productservices.problem_reading_product_features=Probl\u00E8me \u00E0 la lecture des caract\u00E9ristiques de produit.
 productservices.problem_reading_product_features_errors=Probl\u00E8me \u00E0 la lecture des caract\u00E9ristiques de produit : ${errProductFeatures}.
 productservices.problems_getting_product_entity=Probl\u00E8me \u00E0 la lecture de l'entit\u00E9 de produit.
 productservices.problems_product_association_relation_error=Probl\u00E8me dans l'association de produit : ${errMessage}.
 productservices.problems_reading_product_entity=Probl\u00E8me \u00E0 la lecture de l'entit\u00E9 de produit : ${errMessage}.
 productutilservices.did_not_find_any_valid_variants_for_virtual_ID=Aucune variante valide pour la r\u00E9f. virtuelle [${productId}], pas de fusion...
-productutilservices.entity_error_running_clearAllVirtualProductImageNames=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de clearAllVirtualProductImageNames : $ {errMessage}. 
-productutilservices.entity_error_running_discVirtualsWithDiscVariants=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de discVirtualsWithDiscVariants : $ {errMessage}. 
-productutilservices.entity_error_running_makeStandAloneFromSingleVariantVirtuals=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de makeStandAloneFromSingleVariantVirtuals : $ {errMessage}. 
-productutilservices.entity_error_running_removeCategoryMembersOfDiscProducts=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de removeCategoryMembersOfDiscProducts : $ {errMessage}. 
-productutilservices.entity_error_running_removeDuplicateOpenEndedCategoryMembers=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de removeDuplicateOpenEndedCategoryMembers : $ {errMessage}. 
-productutilservices.entity_error_running_setAllProductImageNames=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de setAllProductImageNames : $ {errMessage}. 
-productutilservices.error_in_attachProductFeaturesToCategory=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de attachProductFeaturesToCategory : $ {errMessage}. 
+productutilservices.entity_error_running_clearAllVirtualProductImageNames=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de clearAllVirtualProductImageNames : ${errMessage}.
+productutilservices.entity_error_running_discVirtualsWithDiscVariants=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de discVirtualsWithDiscVariants : ${errMessage}.
+productutilservices.entity_error_running_makeStandAloneFromSingleVariantVirtuals=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de makeStandAloneFromSingleVariantVirtuals : ${errMessage}.
+productutilservices.entity_error_running_removeCategoryMembersOfDiscProducts=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de removeCategoryMembersOfDiscProducts : ${errMessage}.
+productutilservices.entity_error_running_removeDuplicateOpenEndedCategoryMembers=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de removeDuplicateOpenEndedCategoryMembers : ${errMessage}.
+productutilservices.entity_error_running_setAllProductImageNames=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de setAllProductImageNames : ${errMessage}.
+productutilservices.error_in_attachProductFeaturesToCategory=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de attachProductFeaturesToCategory : ${errMessage}.
 productutilservices.found_more_than_one_valid_variant_for_virtual_ID=Plusieur variantes valides pour la r\u00E9f. virtuelle [${productId}], pas de fusion...\r\n
-transaction_error_quick_add_variant_data=Erreur de transaction pendant l'ajout rapide des donn\u00E9es de variante : ${errMessage}. 
-variantevents.entity_error_quick_add_variant_data=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de l'ajout rapide de donn\u00E9es variantes : $ {errMessage}. 
+transaction_error_quick_add_variant_data=Erreur de transaction pendant l'ajout rapide des donn\u00E9es de variante : ${errMessage}.
+variantevents.entity_error_quick_add_variant_data=Erreur de base de donn\u00E9es (entit\u00E9) lors de l'ex\u00E9cution de l'ajout rapide de donn\u00E9es variantes : ${errMessage}.
 variantevents.featureTypeSize_not_number=La caract\u00E9ristiques TypeSize n'est pas un nombre  : ${featureTypeSizeStr}.
-variantevents.productFeatureId_for_feature_type_number_not_found=La r\u00E9f. de caract\u00E9ristique de produit pour le type de de caract\u00E9ristique ${i} n'a pas \u00E9t\u00E9 trouv\u00E9e. 
+variantevents.productFeatureId_for_feature_type_number_not_found=La r\u00E9f. de caract\u00E9ristique de produit pour le type de de caract\u00E9ristique ${i} n'a pas \u00E9t\u00E9 trouv\u00E9e.
 variantevents.productId_required_but_missing=La r\u00E9f. de produit est indispensable mais manque.
 variantevents.product_not_found_with_ID=Article avec la r\u00E9f. ${productId} non trouv\u00E9.
-variantevents.successfully_created_variant_product_with_id=Cr\u00E9ation r\u00E9sussie de la variante d'article :  r\u00E9f. ${variantProductId} (inclut l'association, et les caract\u00E9ristiques standards pour la variante). 
+variantevents.successfully_created_variant_product_with_id=Cr\u00E9ation r\u00E9sussie de la variante d'article :  r\u00E9f. ${variantProductId} (inclut l'association, et les caract\u00E9ristiques standards pour la variante).
 variantevents.variantProductId_required_but_missing_enter_an_id=La r\u00E9f. de variante de produit est indispensable mais manque. S'il vous pla\u00EEt entrez une r\u00E9f. pour la nouvelle variante de produit.
